--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"projectname": "twt-taro",
 	"description": "TWT Taro Template",
-	"appid": "wxa3e42f69c07a1436",
+	"appid": "wxee98ccfa604a98bb",
 	"setting": {
 		"urlCheck": false,
 		"es6": false,
